src/App.css
/* GLOBAL */
:root {
  --main-blue: #3A4BF2;
  --dark-blue: #28348A;
  --accent-blue: #00DCDC;
  --background: #F2F3FC;
  --white: #FFFFFF;
  --accent-light: #DFE1F8;
  font-size: 14px;
}

.App {
  background-color: var(--background);
  font-family: sofia-pro, sans-serif;
  font-weight: 400;
  font-style: normal;
  padding-bottom: 160px;
  line-height: 1.8rem;
}

ul {
  list-style: none;
  list-style-type: none;
  padding-left: 0;
}

/* COUNTER BAR */
.counter-nav {
  background-color: var(--main-blue);
  color: var(--white);
  position: fixed;
  z-index: 10;
  width: 100%;
  height: 76px;
  margin-top: -76px;
  margin-left: 230px;
  text-align: center;
  display: inline;
}

.counter-nav .timer-title {
  font-size: 1.14rem;
  font-weight: 500;
  display: inline;
}

.counter-nav .timer-countdown {
  font-size: 3.28rem;
  font-weight: 600;
  display: inline;

}

.counter-nav .book-meeow-btn {
  height: 45px;
  width: 165px;
  border: none;
  background-color: var(--accent-blue);
  color: var(--white);
  border-radius: 6px;
  display: inline;
}

.counter-nav .fa-magnifying-glass {
  color: var(--main-blue);
  position: relative;
  left: 32px;
  font-size: 1.6rem;
}

.counter-nav .search {
  height: 45px;
  width: 246px;
  padding-left: 45px;
  border: none;
  border-radius: 4px;
}

.counter-nav .notifications {
  color: var(--white);
  font-size: 1.14rem;
  text-decoration: none;
}

.counter-nav .fa-bell {
  font-size: 1.6rem;
}

.counter-nav .nav-profile-img {
  height: 57px;
  width: 57px;
}

/* SIDEBAR */
.sidebar-nav {
  background-color: var(--white);
  color: var(--main-blue);
  font-weight: 500;
  width: 230px;
  height: 100%;
  z-index: 11;
  position: fixed;
  margin-top: -76px;
}

.sidebar-nav .logo {
  width: 125px;
  margin: 32px;
}

.sidebar-nav ul {
  margin-left: 30px;
}

.sidebar-nav li {
  font-size: 1rem;
  margin-bottom: 28px;
}

/* SIDEBAR FOOTER */
.sidebar-footer {
  position: fixed;
  bottom: 10px;
  width: 229px;
}

.sidebar-footer .how-to-btn {
  background-color: var(--accent-blue);
  color: var(--white);
  width: 148px;
  height: 41px;
  border: none;
  border-radius: 4px;
  margin-left: 30px;
}

.sidebar-footer hr {
  background-color: #3744E9;
  opacity: 12%;
}

/* MAIN */
main {
  margin-top: 76px;
  margin-left: 240px;
  padding-top: 33px;
  color: var(--dark-blue);
}

.card {
  width: 1292px;
  border: none;
  border-radius: 0%;
  margin-bottom: 20px;
  padding: 46px;
}

.edit-btn,
.add-btn {
  color: var(--main-blue);
  font-size: 1.6rem;
  z-index: 8;
  text-align: right;
  position: relative;
  top: -20px;
  right: -20px;
}

.add-btn {
  margin-bottom: 10px;
  right: -18px;
}

.edit-btn-light,
.add-btn-light {
  color: var(--accent-light);
}

.section-title {
  font-size: 1.28rem;
  font-weight: 600;
  margin-bottom: 20px;
}

.section-descrip {
  font-size: 1rem;
}

.gap {
  width: 24px;
}





/* PROFILE SUMMARY */
.profile-summary .cover-img {
  width: 1292px;
  height: 287px;
  margin-left: -46px;
  margin-top: -67px;
}

.profile-summary .profile-img {
  width: 165px;
  height: 165px;
  border: solid 6px #fff;
  border-radius: 50%;
  position: relative;
  top: -80px;
}

.profile-summary .edit-btn-wht {
  color: var(--white);
}

.profile-summary .edit-btn-profile {
  position: relative;
  left: 1180px;
  top: -60px;
}

.profile-summary .container {
  width: 1292px;
  margin-left: 0px;
  margin-top: -80px;
}

.profile-summary .intro {
  
  font-size: 1rem;
  color: var(--dark-blue);
  margin-bottom: 30px;
}

.profile-summary .profile-name {
  color: var(--main-blue);
  font-size: 1.8rem;
  font-weight: 600;
  letter-spacing: -1px;
  margin-bottom: 30px;
}

.job-title, .location, .connections {
  line-height: 10px;
}

.profile-summary .location {
  display: inline;
}

.profile-summary .connections {
  font-weight: 600;
  display: inline;
  margin-left: 20px;
}

.profile-summary .summary-title {
  font-weight: 600;
  font-size: 1rem;
}

.profile-summary .contact li {
  margin-top: 15px;
}

.profile-summary .contact img {
  border-radius: 3px;
  margin-right: 15px;
  height: 29px;
}

.profile-summary .contact a {
  color: var(--dark-blue);
}

.profile-summary .contact .open-window-icon {
  height: 21px;
  margin-left: 20px;
}

.profile-summary .exp-edu-summary li {
  margin-bottom: 20px;
}

.profile-summary .exp-edu-summary img {
  border-radius: 3px;
  margin-right: 10px;
}

.profile-summary .exp-edu-summary p {
  word-wrap: break-word;
  width: 175px;
  display: inline;
}

.profile-summary .languages li {
  margin-top: 15px;
}

/* AVOID PROFESSIONS */
.avoid .smaller-section-title {
  font-size: 1.1rem;
  font-weight: 600;
}

.avoid .container {
  margin-top: -10px;
  margin-left: 2px;
}

/* IN MEEOW PROFILE */
.in-meeow-profile {
  color: var(--main-blue);
}

.in-meeow-profile .in-meeow-head {
  margin-left: -10px;
}

.in-meeow-profile .container {
  padding: 0;
}

.in-meeow-profile .card {
  display: inline-block;
  background-color: var(--main-blue);
  height: 229px;
  color: var(--white);
  padding: 30px;
  border-radius: 8px;
}

/* AUTO MEEOW REPORT */
.auto-report .edit-btn-dark {
  color: var(--dark-blue);
}

.auto-report .container {
  margin-top: -20px;
  margin-left: 20px;
  padding: 0;
}

.auto-report .card {
  display: inline-block;
  background-color: var(--dark-blue);
  color: var(--white);
  height: 196px;
  padding: 30px;
  border-radius: 8px;
  margin-left: 10px;
  width: 591px;
}

.auto-report input {
  border: solid 3px var(--dark-blue);
  margin-right: 10px;
  
}

/* SERVICES & SKILLS */
.services-skills .container {
  padding: 0;
  margin: -50px 0px -80px -10px;
  height: 370px;
}

.services-skills card {
  height: 370px;
  
}

.services-skills .section-title {
  margin-bottom: 35px;
}

.services-skills ul {
  -moz-column-count: 2;
  -moz-column-gap: 20px;
  -webkit-column-count: 2;
  -webkit-column-gap: 20px;
  column-count: 2;
  column-gap: 20px;
}

.services-skills li {
  margin-bottom: 10px;
}

/* ABOUT */
.about-info {
  margin-top: -20px;
  text-align: justify;
}

/* INTERESTS */
.interests-info {
  margin-top: -20px;
}

.interests li {
  margin-bottom: 15px;
}

/* EXPERIENCE */
.exp-content {
  margin-top: -30px;
}

.exp-content .edit-btn {
  position: relative;
  left: 1200px;
}

.exp-content .exp-section {
  margin: 60px 0;
}

.exp-content .exp-info {
  margin: -50px 0 20px 80px;
  width: 90%;
}

.exp-content img {
  margin-left: -20px;
  width: 49px;
  height: 49px;
}

.exp-content li {
  margin-bottom: 8px;
}

.exp-content hr {
  border: solid 2px #F7F8FD;
}

/* EDUCATION */
.edu-content {
  margin-top: -50px;
}

.edu-content .edu-info {
  margin: -50px 0 20px 80px;
  width: 90%;
}

